Updates to DS3 cmake + poor implementation of belady that needs to be redone, but this is not a priority

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(MemSim2 VERSION 0.1)
 
 if (CMAKE_BUILD_TYPE MATCHES "Release")
     set(COMPILE_OPTIONS
-        -O3
+        -Ofast
+        -flto=auto
         -fno-strict-aliasing
         -Wno-deprecated
         -Wno-unknown-warming-option
