--- a/DRAMsim3/CMakeLists.txt
+++ b/DRAMsim3/CMakeLists.txt
@@ -2,14 +2,6 @@ cmake_minimum_required(VERSION 3.0.0)
 project(dramsim3)
 
 set(default_build_type "Release")
-if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
-  message(STATUS "Setting build type to '${default_build_type}' as none was specified.")
-  set(CMAKE_BUILD_TYPE "${default_build_type}" CACHE
-      STRING "Choose the type of build." FORCE)
-  # Set the possible values of build type for cmake-gui
-  set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
-    "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
-endif()
 
 add_library(inih INTERFACE)
 target_include_directories(inih INTERFACE ext/headers)
@@ -40,6 +32,8 @@ add_library(dramsim3 SHARED
     src/timing.cc
     src/memory_system.cc
 )
+
+target_compile_options(dramsim3 PRIVATE -Ofast -flto=auto -fno-strict-aliasing)
 
 if (THERMAL)
     # dependency check
